[package]
name = "zetik_prime"
version = "0.2.0"
edition = "2021"
description = "A crate for generating prime numbers with an iterator"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/crate/zetik_prime/latest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.2", features = ["derive"] }
