[package]
name = "dioxus_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zetik = {path = "../../../"}
zetik-tailwind = "0.1.1"
dioxus = { version= "0.2.4", features = ["web", "router"] }
log = "0.4.17"
wasm-log = "0.3.1"